<resources>
    <string name="app_name">سوپر ناتس</string>
    <string name="login">ورود</string>
    <string name="Mobile">موبایل</string>
    <string name="Code">کد دریافتی</string>
    <string name="SmsCode">SmsCode</string>
    <string name="mobile">Mobile</string>
    <string name="preference_PersonType">Preference_PersonType</string>
    <string name="preference_Products">Preference_Products</string>
    <string name="systemUser_latest_order">systemUser_latest_order</string>
    <string name="Token">Token</string>
    <string name="Type">Type</string>
    <string name="Materialintro">Materialintro</string>
    <string name="UserId">UserId</string>
    <string name="ApToken">ApToken</string>
    <string name="toman">تومان</string>
    <string name="orderProduct">سفارش</string>
    <string name="valueInKilogram">مقدار سفارش به کیلو گرم</string>
    <string name="providerFullName">تامین کننده</string>
    <string name="totalStockValue">مقدار موجودی</string>
    <string name="productOrder_saveOrderProblem_message">ثبت سفارش با مشکل روبرو شد، لطفا دوباره تلاش نمایید.</string>
    <string name="productOrder_saveOrder_successMessage">سفارش شما با شماره فاکتور %1$d در سیستم ثبت شد. کارشناسان فروش ما بزودی با شما تماس خواهند گرفت.</string>
    <string name="common_confirm">تایید</string>
    <string name="common_search">جستجو</string>
    <string name="common_systemUser_invalid">اطلاعات کاربری شما معتبر نمی باشد.</string>
    <string name="minimumOrderValue">حداقل حجم خرید</string>
    <string name="proposedPrice">قیمت پیشنهادی شما</string>
    <string name="productOrder_saveOrder_productInvalid">اطلاعات محصول معتبر نمی باشد. لطفا دوباره تلاش نمایید.</string>
    <string name="productOrder_saveOrder_orderCountInvalid">لطفا مقدار سفارش را وارد نمایید.</string>
    <string name="unlimited">نامحدود</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">سوپر ناتس</string>
    <string name="nav_header_subtitle">ecompram@yahoo.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="myInformation_title">اطلاعات من</string>
    <string name="myOrders_title">خرید های من</string>
    <string name="mySales_title">فروش های من</string>
    <string name="common_save">ذخیره</string>

    <string name="common_saveProblem_message">ثبت اطلاعات با مشکل روبرو شد، لطفا دوباره تلاش نمایید.</string>
    <string name="common_loadProblem_message">نمایش اطلاعات با خطا مواجه شد. لطفا دوباره تلاش نمایید.</string>
    <string name="common_saveSuccess_message">ثبت اطلاعات با موفقیت انجام شد.</string>

    <string name="common_saveProduct_message">ثبت کالا با موفقیت انجام شد. کارشناسان فروش ما، کالا را بررسی و سپس آن را تا چند ساعت آینده تایید خواهند کرد.</string>
    <string name="common_profile">پروفایل</string>
    <string name="common_home">صفحه اصلی</string>
    <string name="store_add_product">کالای جدید</string>
    <string name="store_search_product">جستجوی کالا</string>
    <string name="common_favorites">علاقه ها</string>
</resources>
