<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/mnuMainHome"
        android:icon="@drawable/ic_home_24dp"
        android:title="@string/common_home" />
    <item
        android:id="@+id/mnuFavorites"
        android:icon="@drawable/ic_favorite_24dp"
        android:title="@string/common_favorites"/>
    <item
        android:id="@+id/mnuSearchProduct"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/store_search_product"/>
    <item
        android:id="@+id/mnuAddProduct"
        android:icon="@drawable/ic_add_box_24dp"
        android:title="@string/store_add_product"/>
    <item
        android:id="@+id/mnuMyProfile"
        android:icon="@drawable/ic_person_24dp"
        android:title="@string/common_profile"/>


</menu>