<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:layoutDirection="ltr">

    <android.support.v7.widget.CardView
        android:id="@+id/cv"
        android:layout_width="300dp"
        android:layout_height="380dp"
        android:layout_centerInParent="true"
        app:cardCornerRadius="6dp"
        app:cardElevation="3dp"
        app:cardUseCompatPadding="true">

        <LinearLayout
            android:id="@+id/ll_cv"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="10dp">

                <View
                    android:layout_width="8dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="#2fa881" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginEnd="50dp"
                    android:layout_marginRight="50dp"
                    android:text="@string/login"
                    android:textColor="#FFCC00"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingLeft="50dp"
                android:paddingRight="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:gravity="right"
                    android:textColorHint="#c5c5c5">

                    <EditText
                        android:id="@+id/et_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:gravity="right"
                        android:hint="@string/Mobile"
                        android:inputType="number"
                        android:maxLength="11"
                        android:paddingRight="8dp"
                        android:paddingTop="8dp"
                        android:textColor="#2fa881"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="13sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="8dp"
                android:orientation="horizontal"
                android:paddingEnd="30dp"
                android:paddingLeft="50dp"
                android:paddingRight="30dp"
                android:paddingStart="50dp">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/input_layout_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="#c5c5c5"
                    android:visibility="invisible">

                    <EditText
                        android:id="@+id/et_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/selector_bg_edit"
                        android:enabled="false"
                        android:hint="@string/Code"
                        android:inputType="number"
                        android:paddingTop="10dp"
                        android:textColor="#2fa881"
                        android:textCursorDrawable="@drawable/bg_input_cursor"
                        android:textSize="13sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="16dp"
                android:gravity="center">

                <Button
                    android:id="@+id/bt_go"
                    android:layout_width="150dp"
                    android:layout_height="45dp"
                    android:background="@drawable/bt_shape"
                    android:enabled="false"
                    android:onClick="clickLogin"
                    android:stateListAnimator="@drawable/state_list_animator_z"
                    android:text="@string/login"
                    android:textColor="#d3d3d3"
                    android:textSize="14sp" />

                <ProgressBar
                    android:id="@+id/progressBar"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_alignLeft="@+id/bt_go"
                    android:layout_alignStart="@+id/bt_go"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="50dp"
                    android:layout_marginStart="50dp"
                    android:gravity="center"
                    android:visibility="gone" />
            </RelativeLayout>

            <TextView
                android:id="@+id/txt_timer"
                android:layout_width="150dp"
                android:layout_height="45dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="16dp"
                android:background="@drawable/bt_shape"
                android:gravity="center"
                android:onClick="clickLogin"
                android:stateListAnimator="@drawable/state_list_animator_z"
                android:textColor="#d3d3d3"
                android:textSize="12sp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/txt_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:autoLink="all"
                android:clickable="true"
                android:linksClickable="true"
                android:onClick="clickRegisterLayout"
                android:text="قبلا عضو نشده اید؟"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/txt_w8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center"
                android:maxLines="1"
                android:text="لطفا منتظر دریافت پیامک کد تایید بمانید"
                android:textColor="@color/black"
                android:visibility="gone" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/cv"
        android:layout_alignRight="@id/cv"
        android:layout_alignTop="@id/cv"
        android:layout_marginEnd="-20dp"
        android:layout_marginRight="-20dp"
        android:layout_marginTop="25dp"
        android:onClick="clickRegisterLayout"
        android:src="@drawable/ic_signup"
        android:transitionName="loginFab"
        app:fabSize="normal" />

</RelativeLayout>
